增加代码注释，增加数据结构